--- a/Week4Tumblr/Base.lproj/Main.storyboard
+++ b/Week4Tumblr/Base.lproj/Main.storyboard
@@ -18,6 +18,10 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="explore_popup" id="Tue-rL-hnV">
+                                <rect key="frame" x="0.0" y="455" width="185" height="77"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
                             <view contentMode="scaleToFill" id="i6E-jt-Cpu">
                                 <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -73,7 +77,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="accountButton" destination="Sfa-zN-mkO" id="351-R5-Tep"/>
+                        <outlet property="composeButton" destination="fqo-Fs-csU" id="vBa-zt-9ID"/>
                         <outlet property="contentView" destination="GPw-Z0-2Sw" id="InL-xp-YPm"/>
+                        <outlet property="discoverBubble" destination="Tue-rL-hnV" id="TOV-5d-HKl"/>
+                        <outlet property="homeButton" destination="cZK-1w-mO0" id="qOp-2e-eQL"/>
+                        <outlet property="searchButton" destination="PwS-Db-8mD" id="k7g-Zc-1dB"/>
+                        <outlet property="trendingButton" destination="ixl-ht-QAi" id="pfk-9G-wBz"/>
                         <outletCollection property="buttons" destination="cZK-1w-mO0" collectionClass="NSMutableArray" id="ZXM-QQ-TLv"/>
                         <outletCollection property="buttons" destination="PwS-Db-8mD" collectionClass="NSMutableArray" id="x26-WT-bdq"/>
                         <outletCollection property="buttons" destination="Sfa-zN-mkO" collectionClass="NSMutableArray" id="EuR-lR-SrU"/>
@@ -142,36 +152,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="photo_icon" id="PeE-bg-Rhj">
-                                <rect key="frame" x="122" y="99" width="75" height="95"/>
+                                <rect key="frame" x="122.5" y="96" width="75" height="95"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="quote_icon" id="XtD-EJ-dGl">
-                                <rect key="frame" x="223" y="100" width="75" height="96"/>
+                                <rect key="frame" x="229" y="96" width="75" height="96"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="text_icon" id="X5h-b1-ljw">
-                                <rect key="frame" x="17" y="96" width="75" height="95"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                            </imageView>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="link_icon" id="Y4k-d4-dYw">
-                                <rect key="frame" x="17" y="225" width="75" height="95"/>
+                                <rect key="frame" x="16" y="96" width="75" height="95"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="chat_icon" id="nFr-uy-XwJ">
-                                <rect key="frame" x="121" y="225" width="75" height="96"/>
+                                <rect key="frame" x="122.5" y="225" width="75" height="96"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="video_icon" id="O7O-Wn-S7z">
-                                <rect key="frame" x="223" y="225" width="75" height="95"/>
+                                <rect key="frame" x="229" y="225" width="75" height="95"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="nevermind" id="laS-Cd-fVF">
                                 <rect key="frame" x="0.0" y="515" width="320" height="53"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="link_icon" id="Y4k-d4-dYw">
+                                <rect key="frame" x="16" y="225" width="75" height="95"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.1843137255" green="0.27058823529999998" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="backgroundView" destination="K5m-x3-Q1s" id="DCh-9S-Hou"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i0T-hh-WNg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -200,21 +213,23 @@
         <!--Trending View Controller-->
         <scene sceneID="QOg-Vt-ZGk">
             <objects>
-                <viewController storyboardIdentifier="TrendingViewController" id="stX-Tj-rCF" customClass="TrendingViewController" customModule="Week4Tumblr" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TrendingViewController" automaticallyAdjustsScrollViewInsets="NO" id="stX-Tj-rCF" customClass="TrendingViewController" customModule="Week4Tumblr" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="khc-OW-pAG">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Zeu-mT-2Ow">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="524"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="trending_feed" id="WA5-aY-00N">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="1217"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                    </imageView>
+                                </subviews>
                             </scrollView>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="trending_feed" id="WA5-aY-00N">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="1217"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.16862745098039217" green="0.22352941176470589" blue="0.30196078431372547" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
                         <outlet property="trendingImageView" destination="WA5-aY-00N" id="9PR-mn-fHS"/>
@@ -232,6 +247,7 @@
         <image name="account_selected_icon" width="35" height="35"/>
         <image name="chat_icon" width="75" height="96"/>
         <image name="compose_button" width="50" height="35"/>
+        <image name="explore_popup" width="185" height="77"/>
         <image name="home" width="320" height="524"/>
         <image name="home_icon" width="35" height="35"/>
         <image name="home_overlay" width="320" height="100"/>
